--- a/src/components/broker/TitlesValuesBroker.astro
+++ b/src/components/broker/TitlesValuesBroker.astro
@@ -5,6 +5,9 @@
     </div>
     <div id="second-title">
         <h3></h3>
-        <p></p>
+        <div id="profit_div">
+            <p></p>
+            <span></span>
+        </div>
     </div>
 </div>
