--- a/src/components/broker/PagesBroker.astro
+++ b/src/components/broker/PagesBroker.astro
@@ -89,10 +89,14 @@ import TitlesValuesBroker from "@components/broker/TitlesValuesBroker.astro";
                     letter-spacing: 0.5px;
                 }
                 div#profit_div {
-                    display: flex;
+                    position: relative;
                     justify-content: center;
 
                     span {
+                        position: absolute;
+                        left: 59%;
+                        top: 0;
+
                         letter-spacing: 0.5px;
                         color: #ffdd00;
 
@@ -114,6 +118,14 @@ import TitlesValuesBroker from "@components/broker/TitlesValuesBroker.astro";
 
                     h3 {
                         font-size: 1.5rem;
+                    }
+                }
+
+                & > div {
+                    div#profit_div {
+                        span {
+                            left: 60%;
+                        }
                     }
                 }
             }
